--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Depends: ${misc:Depends},
  python-gconf,
  gir1.2-glib-2.0,
  gir1.2-gtk-3.0,
+ gir1.2-launchpad-integration-3.0,
  gir1.2-gdkpixbuf-2.0,
  yelp
 Description: UNKNOWN
