--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,7 @@
 Source: menulibre
 Section: python
 Priority: extra
-Build-Depends: cdbs (>= 0.4.43),
- debhelper (>= 6),
- python (>= 2.6.6-3~),
+Build-Depends: debhelper (>= 8), libglib2.0-bin, python (>= 2.6.6-3~),
  python-distutils-extra (>= 2.10)
 Maintainer: Sean Davis <smd.seandavis@gmail.com>
 Standards-Version: 3.9.3
