--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@ else
 endif
 
 override_dh_auto_install:
-	dh_auto_install -- --install-scripts=/opt/extras.ubuntu.com/menulibre                 --install-data=/opt/extras.ubuntu.com/menulibre                 --install-lib=/opt/extras.ubuntu.com/menulibre
+	dh_auto_install -- --install-scripts=/opt/extras.ubuntu.com/menulibre/bin                 --install-data=/opt/extras.ubuntu.com/menulibre                 --install-lib=/opt/extras.ubuntu.com/menulibre
 
 override_dh_python2:
 	dh_python2 /opt/extras.ubuntu.com/menulibre
@@ -21,7 +21,7 @@ override_dh_install:
 		mkdir -p debian/menulibre/usr/share/applications; \
 		mv debian/menulibre/opt/extras.ubuntu.com/menulibre/share/applications/menulibre.desktop debian/menulibre/usr/share/applications/extras-menulibre.desktop; \
 		rmdir --ignore-fail-on-non-empty debian/menulibre/opt/extras.ubuntu.com/menulibre/share/applications; \
-		sed -i 's|Exec=.*|Exec=/opt/extras.ubuntu.com/menulibre/bin/menulibre|' debian/menulibre/usr/share/applications/extras-menulibre.desktop; \
+		sed -i 's|Exec=[^ ]*|Exec=/opt/extras.ubuntu.com/menulibre/bin/menulibre|' debian/menulibre/usr/share/applications/extras-menulibre.desktop; \
 		sed -i 's|Icon=/usr/|Icon=/opt/extras.ubuntu.com/menulibre/|' debian/menulibre/usr/share/applications/extras-menulibre.desktop; \
 	fi
 	grep -RlZ 'import gettext' debian/menulibre/* | xargs -0 -r sed -i 's|\(import\) gettext$$|\1 locale|'
