--- a/debian/control
+++ b/debian/control
@@ -12,9 +12,9 @@ Architecture: all
 XB-Python-Version: ${python:Versions}
 Depends: ${misc:Depends},
  ${python:Depends},
- python-gconf,
  gir1.2-glib-2.0,
  gir1.2-gtk-3.0,
+ python-gi,
  gir1.2-gdkpixbuf-2.0,
  yelp
 Description: advanced menu editor with quicklist support
