--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: menulibre
 Section: python
 Priority: extra
-Build-Depends: debhelper (>= 8), libglib2.0-bin, python (>= 2.6.6-3~),
+Build-Depends: debhelper (>= 8),
+ python (>= 2.6.6-3~),
  python-distutils-extra (>= 2.10)
 Maintainer: Sean Davis <smd.seandavis@gmail.com>
 Standards-Version: 3.9.3
@@ -14,6 +15,7 @@ Depends: ${misc:Depends},
  ${python:Depends},
  gir1.2-glib-2.0,
  gir1.2-gtk-3.0,
+ python-xdg,
  gir1.2-gdkpixbuf-2.0,
  yelp
 Description: advanced menu editor with quicklist support
