Do not install .pot

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include bin/*
 recursive-include data *.svg *.ui
 recursive-include menulibre *.py
 recursive-include menulibre_lib *.py
-recursive-include po *.pot *.po *.in
+recursive-include po *.po *.in
