--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@
 export DH_VERBOSE=1
 
 # Disable tests
-export PYBUILD_DISABLE=test/python3.5
+export PYBUILD_DISABLE_python3=test
 
 %:
 	dh $@ --with python3 --buildsystem=pybuild
