Extend categories with GTK

--- a/menulibre.desktop.in
+++ b/menulibre.desktop.in
@@ -5,7 +5,7 @@ Exec=menulibre
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;Settings;DesktopSettings;Utility;
+Categories=GNOME;GTK;Settings;DesktopSettings;Utility;
 Keywords=Configuration;Menu;User;
 Icon=menulibre
 X-Ubuntu-Gettext-Domain=menulibre
