--- a/data/metainfo/menulibre.appdata.xml.in
+++ b/data/metainfo/menulibre.appdata.xml.in
@@ -7,6 +7,7 @@
   <name>MenuLibre</name>
   <_summary>An advanced FreeDesktop.org compliant menu editor</_summary>
   <content_rating type="oars-1.0"/>
+  <developer_name>Bluesabre</developer_name>
 
   <description>
     <_p>
