--- a/data/metainfo/menulibre.appdata.xml.in
+++ b/data/metainfo/menulibre.appdata.xml.in
@@ -29,34 +29,31 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://bluesabre.org/content/images/size/w2000/2019/12/menulibre-1.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/6407d9c5-dec0-4e71-922d-05af9a1c3066/menulibre_2014_01.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_01.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/39158f9d-5bfc-4704-b012-c745eaa4b60f/menulibre_2014_02.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_02.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/efa15783-d3d5-4561-a6af-1c2a30c86b30/menulibre_2014_03.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_03.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/889d63ee-87f7-4eaa-97f5-e804743d65f9/menulibre_2014_04.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_04.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/b73645db-7b28-4f1a-a848-e11fc36e5f29/menulibre_2014_05.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_05.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/996c2349-d8ad-461d-9901-3393972fdd36/menulibre_2014_06.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_06.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/e0c293c6-7b95-481b-9fc0-0a44bdc6ab0b/menulibre_2014_07.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_07.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/2f2bb9a4-18e0-4b34-9cc3-3bb5079c5494/menulibre_2014_08.png</image>
     </screenshot>
     <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_08.png</image>
-    </screenshot>
-    <screenshot>
-      <image>https://bluesabre.org/content/images/2019/12/menulibre_2014_09.png</image>
+      <image>https://images.squarespace-cdn.com/content/v1/61ff1e1701ec5b7bb883b7d5/c1e0a874-430f-433e-8e56-35b71fa19fcf/menulibre_2014_09.png</image>
     </screenshot>
   </screenshots>
 
