--- a/.github/workflows/codespell.yaml
+++ b/.github/workflows/codespell.yaml
@@ -15,9 +15,9 @@ jobs:
       uses: actions/checkout@v3
       with:
         fetch-depth: 1
-    - name: Check code spell
+    - name: Check codespell
       uses: codespell-project/actions-codespell@v1
       with:
         check_filenames: true
         ignore_words_file: .codespellignore
-        skip: "*/**.yaml,*/**.yml,po/**.po"
+        skip: "*/**.yaml,*/**.yml,*/**.po"
