--- a/data/metainfo/menulibre.appdata.xml.in
+++ b/data/metainfo/menulibre.appdata.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2021-2022 Sean Davis <sean@bluesabre.org> -->
+<!-- Copyright 2021-2023 Sean Davis <sean@bluesabre.org> -->
 <component type="desktop">
   <id>menulibre.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
@@ -20,10 +20,10 @@
       <_em>Features:</_em>
     </p>
     <ul>
-      <_li>A beautiful interface powered by the latest version of GTK+.</_li>
-      <_li>Create new launchers, or modify existing ones with complete control over common settings and access to advanced settings.</_li>
-      <_li>Add, remove, and adjust desktop actions: powerful shortcuts available used by Unity, Xfce, and Pantheon.</_li>
-      <_li>Easily rearrange menu items to suit your needs.</_li>
+      <_li>A beautiful interface powered by the latest version of GTK+</_li>
+      <_li>Create new launchers, or modify existing ones with complete control over common settings and access to advanced settings</_li>
+      <_li>Add, remove, and adjust desktop actions: powerful shortcuts available used by Unity, Xfce, and Pantheon</_li>
+      <_li>Easily rearrange menu items to suit your needs</_li>
     </ul>
   </description>
 
@@ -66,6 +66,12 @@
   </provides>
 
   <releases>
+    <release version="2.3.1" date="2023-04-30">
+      <description>
+        <_p>This release adds a new command editor and improves support for icon themes
+        with missing icons.</_p>
+      </description>
+    </release>
     <release version="2.3.0" date="2022-06-12">
       <description>
         <_p>This release adds support for MATE and Unity and improves integration
