--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -21,6 +21,7 @@ menulibre.desktop.in
 
 # Python Files
 menulibre/__init__.py
+menulibre/ActionEditor.py
 menulibre/AdvancedPage.py
 menulibre/CategoryEditor.py
 menulibre/CommandEditor.py
