--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -27,8 +27,7 @@ menulibre/CategoryEditor.py
 menulibre/CommandEditor.py
 menulibre/Dialogs.py
 menulibre/FileHandler.py
-menulibre/IconSelectionDialog.py
-menulibre/IconFileSelectionDialog.py
+menulibre/IconEntry.py
 menulibre/MenuEditor.py
 menulibre/MenulibreApplication.py
 menulibre/MenulibreHistory.py
