--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -28,6 +28,7 @@ menulibre/CategoryEditor.py
 menulibre/CommandEditor.py
 menulibre/Dialogs.py
 menulibre/FileHandler.py
+menulibre/Headerbar.py
 menulibre/IconEntry.py
 menulibre/MenuEditor.py
 menulibre/MenulibreApplication.py
@@ -42,6 +43,7 @@ menulibre/StartupWmClassEntry.py
 menulibre/SwitchEntry.py
 menulibre/TextEntry.py
 menulibre/TextEntryButton.py
+menulibre/Toolbar.py
 menulibre/util.py
 menulibre/XmlMenuElementTree.py
 
