--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,10 +16,10 @@
 # Desktop File
 menulibre.desktop.in
 
-# Glade Files
-[type: gettext/glade]data/ui/MenulibreWindow.ui
-
 # Python Files
+menulibre_lib/__init__.py
+menulibre_lib/helpers.py
+menulibre_lib/menulibreconfig.py
 menulibre/__init__.py
 menulibre/ActionEditor.py
 menulibre/AdvancedPage.py
@@ -28,6 +28,8 @@ menulibre/CategoryEditor.py
 menulibre/CommandEditor.py
 menulibre/Dialogs.py
 menulibre/FileHandler.py
+menulibre/FilenameLabel.py
+menulibre/Headerbar.py
 menulibre/IconEntry.py
 menulibre/MenuEditor.py
 menulibre/MenulibreApplication.py
@@ -42,8 +44,10 @@ menulibre/StartupWmClassEntry.py
 menulibre/SwitchEntry.py
 menulibre/TextEntry.py
 menulibre/TextEntryButton.py
+menulibre/Toolbar.py
 menulibre/util.py
 menulibre/XmlMenuElementTree.py
+setup.py
 
 # XML Files
 [type: gettext/xml]data/metainfo/menulibre.appdata.xml.in
