--- a/data/metainfo/menulibre.appdata.xml.in
+++ b/data/metainfo/menulibre.appdata.xml.in
@@ -66,6 +66,12 @@
   </provides>
 
   <releases>
+    <release version="2.3.2" date="2023-08-16">
+      <description>
+        <_p>This release features a refreshed user interface and new inline help buttons
+        for each field.</_p>
+      </description>
+    </release>
     <release version="2.3.1" date="2023-04-30">
       <description>
         <_p>This release adds a new command editor and improves support for icon themes
