--- a/data/metainfo/menulibre.appdata.xml.in
+++ b/data/metainfo/menulibre.appdata.xml.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2021-2023 Sean Davis <sean@bluesabre.org> -->
+<!-- Copyright 2021-2024 Sean Davis <sean@bluesabre.org> -->
 <component type="desktop">
   <id>menulibre.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
@@ -66,6 +66,15 @@
   </provides>
 
   <releases>
+    <release version="2.4.0" date="2024-02-25">
+      <description>
+        <_p>This release improves desktop environment integration and includes several
+        features to make it easy to manage your menus. MATE and Unity desktop environments
+        are now supported. The refreshed user interface features inline help buttons
+        for each field. The new command editor makes advanced launcher configuration
+        easier than ever.</_p>
+      </description>
+    </release>
     <release version="2.3.2" date="2023-08-22">
       <description>
         <_p>This release features a refreshed user interface and new inline help buttons
